# neighborhood-score

./: .coderabbit.yaml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE.md  ISSUES.md  LICENSE  METHODOLOGY.md  Makefile  README.md  SECURITY.md  VALIDATION.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: d1cb410fe5e0_baseline_existing_schema.py
backend/app/: auth.py  cache.py  config.py  db.py  main.py  models.py
backend/app/lib/: claim_parser.py  commute_verifier.py  landmark_resolver.py
backend/app/pipelines/: compute_trust_scores.py  enrich_builders_offline.py  fetch_aqi_hourly.py  fetch_bus_stops.py  fetch_commute_times.py  fetch_compdata.py  fetch_crime_data.py  fetch_delivery_coverage.py  fetch_flood_risk.py  fetch_google_places.py  fetch_noise_zones.py  fetch_parks.py  fetch_police_stations.py  fetch_rera_builders.py  fetch_reviews.py  fetch_slum_data.py  fetch_ward_mapping.py  fetch_waste_infra.py  geocode_neighborhoods.py  pipeline_walkability.py  precompute_scores.py  runner.py  scrape_krera.py  scrape_sitesetu.py  seed_all.py  seed_areas.py  seed_curated_pois.py  seed_infra.py  seed_infrastructure.py  seed_landmarks.py  seed_neighborhoods.py  seed_points.py  seed_prices.py  seed_transit.py  seed_zones.py  verify_ai.py
backend/app/routers/: ai_chat.py  city_feed.py  property_intelligence.py  report.py  (+1 more)
backend/tests/: test_api.py  test_city_feed.py  test_config.py  test_geo.py  test_models.py
(+132 files in other folders)
